# video-stream

./: .gitignore  CMakeLists.txt  README.md  ffmpeg-commands.txt  httprequest.cpp  httprequest.h  httpresponse.h  httprouter.h  httpserver.cpp  httpserver.h  index.html  main.cpp  scripts.js  styles.css
htdocs/: index.html  scripts.js  styles.css
src/: httprequest.cpp  httprequest.h  httpresponse.cpp  httprouter.cpp  httprouter.h  httpserver.cpp  httpserver.h  main.cpp
